--- a/ModRank/package.json
+++ b/ModRank/package.json
@@ -13,6 +13,6 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "request": "^2.81.0",
-    "serve-favicon": "~2.4.2"
+    "sanitize": "^2.0.1"
   }
 }
