--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/ModRank/modrank - Web Deploy.pubxml
+/ModRank/modrank - FTP.pubxml
