--- a/ModRank/package.json
+++ b/ModRank/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "request": "^2.81.0",
-    "sanitize": "^2.0.1"
+    "sanitize": "^2.0.1",
+    "universal-analytics": "^0.4.15"
   }
 }
