--- a/ModRank/package.json
+++ b/ModRank/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.2.1",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "mongojs": "^2.5.0",
     "morgan": "~1.8.1",
     "request": "^2.81.0",
     "sanitize": "^2.0.1",
