--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,9 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceFolder}/bin/www"
+            "env": {
+                "debug": true
+            }
         }
     ]
 }
