--- a/node/package.json
+++ b/node/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "modrank",
+  "name": "modranker",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+  "description": "Rimworld mod ranking website",
+  "author": "n-fisher",
+  "main": "app.js",
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
