--- a/node/package.json
+++ b/node/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "debug": "^2.6.9",
+    "express": "^4.16.3",
     "jade": "~1.11.0",
+    "mongoist": "^1.7.2",
     "mongojs": "^2.5.0",
     "morgan": "~1.8.1",
-    "request": "^2.81.0",
-    "sanitize": "^2.0.1",
+    "request": "^2.85.0",
+    "sanitize": "^2.1.0",
     "universal-analytics": "^0.4.15"
   }
 }
