--- a/node/package.json
+++ b/node/package.json
@@ -7,7 +7,7 @@
   },
   "description": "Rimworld mod ranking website",
   "author": "n-fisher",
-  "main": "app.js",
+  "main": "App.js",
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
