Fix everything, back to full feature availability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
       - ./ModRank:/Modrank
       - ./Logs:/Logs
+      - ./Protected:/Protected
     depends_on:
       - mongodb
     restart: always
